package com.javadesignpatterns;

/*
PROJECT NAME : design-patterns-java-maven
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/21/2021 12:48 AM
*/

public interface WeatherObserver {
    public void update(WeatherType currentWeather);
}
